--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -433,10 +433,10 @@ EXAMPLESPOFILES = \
   zh_TW.po
 
 install-data-local: $(EXAMPLESFILES)
-	$(mkdir_p) $(DESTDIR)$(examplesdir)
+	$(MKDIR_P) $(DESTDIR)$(examplesdir)
 	for f in $(EXAMPLESFILES); do \
 	  d=`echo /$$f | sed -e 's,/[^/]*$$,,'`; \
-	  test -z "$$d" || $(mkdir_p) $(DESTDIR)$(examplesdir)$$d || exit 1; \
+	  test -z "$$d" || $(MKDIR_P) $(DESTDIR)$(examplesdir)$$d || exit 1; \
 	  b=`echo $$f | sed -e 's,^.*/,,'`; \
 	  if test $$b = autogen.sh || test $$b = autoclean.sh; then \
 	    echo "$(INSTALL_SCRIPT) $(srcdir)/$$f $(DESTDIR)$(examplesdir)/$$f"; \
@@ -450,7 +450,7 @@ install-data-local: $(EXAMPLESFILES)
 	  for f2 in $(EXAMPLESPOFILES); do \
 	    f=$$f1/po/$$f2; \
 	    d=`echo /$$f | sed -e 's,/[^/]*$$,,'`; \
-	    test -z "$$d" || $(mkdir_p) $(DESTDIR)$(examplesdir)$$d || exit 1; \
+	    test -z "$$d" || $(MKDIR_P) $(DESTDIR)$(examplesdir)$$d || exit 1; \
 	    b=`echo $$f | sed -e 's,^.*/,,'`; \
 	    echo "$(INSTALL_DATA) $(srcdir)/$$f $(DESTDIR)$(examplesdir)/$$f"; \
 	    $(INSTALL_DATA) $(srcdir)/$$f $(DESTDIR)$(examplesdir)/$$f; \
@@ -458,16 +458,16 @@ install-data-local: $(EXAMPLESFILES)
 	done
 
 installdirs-local:
-	$(mkdir_p) $(DESTDIR)$(examplesdir)
+	$(MKDIR_P) $(DESTDIR)$(examplesdir)
 	for f in $(EXAMPLESFILES); do \
 	  d=`echo /$$f | sed -e 's,/[^/]*$$,,'`; \
-	  test -z "$$d" || $(mkdir_p) $(DESTDIR)$(examplesdir)$$d || exit 1; \
+	  test -z "$$d" || $(MKDIR_P) $(DESTDIR)$(examplesdir)$$d || exit 1; \
 	done
 	for f1 in $(EXAMPLESDIRS); do \
 	  for f2 in $(EXAMPLESPOFILES); do \
 	    f=$$f1/po/$$f2; \
 	    d=`echo /$$f | sed -e 's,/[^/]*$$,,'`; \
-	    test -z "$$d" || $(mkdir_p) $(DESTDIR)$(examplesdir)$$d || exit 1; \
+	    test -z "$$d" || $(MKDIR_P) $(DESTDIR)$(examplesdir)$$d || exit 1; \
 	  done; \
 	done
 
@@ -489,7 +489,7 @@ distdir1:
 	  if test -f $$file; then d=.; else d=$(srcdir); fi; \
 	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
 	  if test "$$dir" != "$$file" && test "$$dir" != "."; then \
-	    $(mkdir_p) "$(distdir)/$$dir"; \
+	    $(MKDIR_P) "$(distdir)/$$dir"; \
 	  fi; \
 	  cp -p $$d/$$file $(distdir)/$$file || exit 1; \
 	done
@@ -499,7 +499,7 @@ distdir1:
 	    if test -f $$file; then d=.; else d=$(srcdir); fi; \
 	    dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
 	    if test "$$dir" != "$$file" && test "$$dir" != "."; then \
-	      $(mkdir_p) "$(distdir)/$$dir"; \
+	      $(MKDIR_P) "$(distdir)/$$dir"; \
 	    fi; \
 	    cp -p $$d/$$file $(distdir)/$$file || exit 1; \
 	  done; \
