autopoint: fix copying intl/ directory
* autopoint.in (omitintl): Don't set it 'no' when no
AM_GNU_GETTEXT call is found.
Reported by Sebastien Helleu in <http://savannah.gnu.org/bugs/?39536>.

--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -361,7 +361,7 @@ if test -z "$m4dir" && test -f Makefile.am; then
 fi
 
 # Check whether to omit the intl/ directory.
-omitintl=no
+omitintl=
 xargs=`func_trace AM_GNU_GETTEXT`
 for arg in $xargs; do
   if test 'external' = "$arg"; then
