tests: fix path adjustment for LTLIBINTL

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -549,6 +549,8 @@ AC_CONFIG_FILES([m4/Makefile])
 
 AC_CONFIG_FILES([tests/Makefile])
 
+AC_CONFIG_FILES([tests/init.cfg])
+
 AC_CONFIG_FILES([gnulib-tests/Makefile])
 
 AC_OUTPUT
