--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -152,7 +152,7 @@ m4_define([AM_GNU_GETTEXT], [])
 m4_define([AM_GNU_GETTEXT_VERSION], [])
 ' \
   | autom4te --no-cache --language=Autoconf-without-aclocal-m4 \
-    --trace="$1":\$% - "$2"
+    --trace="$1":\$% - "$2" 2>/dev/null
 }
 
 # func_usage
