autopoint: disable m4_include and m4_esyscmd when tracing
* autopoint.in (func_trace): Disable m4_include and m4_esyscmd.
* gettextize.in (func_trace): Likewise.
Reported by Bernhard Voelker in
<https://lists.gnu.org/archive/html/bug-gettext/2013-11/msg00011.html>
and suggested by Eric Blake at <https://savannah.gnu.org/bugs/?40083>.

--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -141,12 +141,14 @@ fi
 func_trace ()
 {
   echo '\
-dnl ignore M4sugar macros which may abort autom4te
+dnl disable macros which may abort autom4te
 m4_undefine([m4_assert])
 m4_undefine([m4_fatal])
 m4_undefine([m4_warn])
 m4_undefine([m4_errprintn])
 m4_undefine([m4_exit])
+m4_undefine([m4_include])
+m4_undefine([m4_esyscmd])
 dnl macros which needs to be traced without aclocal.m4
 m4_define([AM_GNU_GETTEXT], [])
 m4_define([AM_GNU_GETTEXT_VERSION], [])
