autopoint: Allow user to specify custom autom4te executable
* autopoint.in (func_trace): Allow user to specify autom4te
executable name through $AUTOM4TE envvar.
* gettextize.in (func_trace): Likewise.
Suggested by Eric Blake at
<https://lists.gnu.org/archive/html/bug-gettext/2013-12/msg00006.html>.

--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -153,7 +153,7 @@ dnl macros which needs to be traced without aclocal.m4
 m4_define([AM_GNU_GETTEXT], [])
 m4_define([AM_GNU_GETTEXT_VERSION], [])
 ' \
-  | autom4te --no-cache --language=Autoconf-without-aclocal-m4 \
+  | ${AUTOM4TE:-autom4te} --no-cache --language=Autoconf-without-aclocal-m4 \
     --trace="$1":\$% - "$2" 2>/dev/null
 }
 
