tests: use absolute path of source files
Replace ../$top_srcdir with $abs_top_srcdir in gettext-tools tests
to add support for configuration with absolute path.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -161,6 +161,7 @@ CHECKER =
 
 TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir) \
 		    abs_srcdir=$(abs_srcdir) \
+		    abs_top_srcdir=$(abs_top_srcdir) \
 		    GETTEXT="$(CHECKER) tstgettext" \
 		    NGETTEXT="$(CHECKER) tstngettext" \
 		    XGETTEXT="$(CHECKER) xgettext" \
