tests: Call included libtool script with $CONFIG_SHELL

--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -1,4 +1,4 @@
-# Variable needed by LIBTOOL and LTLIBINTL.
+# Variable needed by LTLIBINTL.
 top_builddir=../..
 
 OBJEXT="@OBJEXT@"
@@ -9,7 +9,6 @@ CXX="@CXX@"
 CXXFLAGS="@CXXFLAGS@"
 CPPFLAGS="@CPPFLAGS@"
 LDFLAGS="@LDFLAGS@"
-LIBTOOL="@LIBTOOL@"
 LTLIBINTL="@LTLIBINTL@"
 JAVA_CHOICE="@JAVA_CHOICE@"
 BUILDJAVA="@BUILDJAVA@"
