--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -136,8 +136,8 @@ if test "@RELOCATABLE@" = yes; then
   gettext_dir=`echo "$gettext_dir/" | sed -e "s%^${orig_installprefix}/%${curr_installprefix}/%" | sed -e 's,/$,,'`
 fi
 
-# func_trace macro
-# traces an Autoconf macro call and outputs the arguments to stdout.
+# func_trace macro configure.ac
+# traces a standard Autoconf macro call and outputs the arguments to stdout.
 func_trace ()
 {
   echo '\
@@ -149,12 +149,33 @@ m4_undefine([m4_errprintn])
 m4_undefine([m4_exit])
 m4_undefine([m4_include])
 m4_undefine([m4_esyscmd])
-dnl macros which needs to be traced without aclocal.m4
-m4_define([AM_GNU_GETTEXT], [])
-m4_define([AM_GNU_GETTEXT_VERSION], [])
 ' \
   | ${AUTOM4TE:-autom4te} --no-cache --language=Autoconf-without-aclocal-m4 \
     --trace="$1":\$% - "$2" 2>/dev/null
+}
+
+# func_trace_sed macro configure.ac
+# traces a non-standard Autoconf macro call and outputs the arguments to stdout.
+func_trace_sed ()
+{
+  # Otherwise, manually extract macro calls in configure.ac with
+  # sed.  This is less reliable than the above way and does not
+  # support multiple calls.
+  sed_extract_arguments='
+s,#.*$,,; s,^dnl .*$,,; s, dnl .*$,,;
+/'"$1"'(/ {
+  ta
+  :a
+    s/)/)/
+    tb
+    s/\\$//
+    N
+    ba
+  :b
+  s,^.*'"$1"'([[ ]*\([^]"$`\\)]*\).*$,\1,p
+}
+d'
+  sed -e "$sed_extract_arguments" "$2"
 }
 
 # func_usage
@@ -277,7 +298,7 @@ fi
 
 # Check whether the -V option and the version number in configure.in match.
 # At least one of the two must be given. If both are given, they must agree.
-xver=`func_trace AM_GNU_GETTEXT_VERSION "$configure_in"`
+xver=`func_trace_sed AM_GNU_GETTEXT_VERSION "$configure_in"`
 if test -z "$xver" && test -f intl/VERSION; then
   xver=`cat intl/VERSION | LC_ALL=C sed -n -e 's/^.*gettext-\([-+_.0-9A-Za-z]*\).*$/\1/p'`
 fi
@@ -355,7 +376,7 @@ fi
 
 # Check whether to omit the intl/ directory.
 omitintl=
-xargs=`func_trace AM_GNU_GETTEXT "$configure_in"`
+xargs=`func_trace_sed AM_GNU_GETTEXT "$configure_in"`
 save_IFS="$IFS"; IFS=:
 for arg in $xargs; do
   if test 'external' = "$arg"; then
