--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -136,7 +136,7 @@ if test "@RELOCATABLE@" = yes; then
   gettext_dir=`echo "$gettext_dir/" | sed -e "s%^${orig_installprefix}/%${curr_installprefix}/%" | sed -e 's,/$,,'`
 fi
 
-# func_trace macro
+# func_trace macro configure.ac
 # traces an Autoconf macro call and outputs the arguments to stdout.
 func_trace ()
 {
@@ -149,12 +149,33 @@ m4_undefine([m4_errprintn])
 m4_undefine([m4_exit])
 m4_undefine([m4_include])
 m4_undefine([m4_esyscmd])
-dnl macros which needs to be traced without aclocal.m4
-m4_define([AM_GNU_GETTEXT], [])
-m4_define([AM_GNU_GETTEXT_VERSION], [])
 ' \
   | ${AUTOM4TE:-autom4te} --no-cache --language=Autoconf-without-aclocal-m4 \
     --trace="$1":\$% - "$2" 2>/dev/null
+}
+
+# func_trace_sed macro configure.ac
+# traces a non-standard Autoconf macro call and outputs the arguments to stdout.
+func_trace_sed ()
+{
+  # Otherwise, manually extract macro calls in configure.ac with
+  # sed.  This is less reliable than the above way and does not
+  # support multiple calls.
+  sed_extract_arguments='
+s,#.*$,,; s,^dnl .*$,,; s, dnl .*$,,;
+/'"$1"'(/ {
+  ta
+  :a
+    s/)/)/
+    tb
+    s/\\$//
+    N
+    ba
+  :b
+  s,^.*'"$1"'([[ ]*\([^]"$`\\)]*\).*$,\1,p
+}
+d'
+  sed -e "$sed_extract_arguments" "$2"
 }
 
 # func_usage
@@ -676,7 +697,7 @@ else
   echo "Not copying intl/ directory."
   # Tell the user what to put into configure.ac, if it is not already there.
   external=
-  xargs=`func_trace AM_GNU_GETTEXT "$srcdir/$configure_in"`
+  xargs=`func_trace_sed AM_GNU_GETTEXT "$srcdir/$configure_in"`
   save_IFS="$IFS"; IFS=:
   for arg in $xargs; do
     if test 'external' = "$arg"; then
