Add missing x-desktop.h to noinst_HEADERS

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -53,7 +53,7 @@ po-time.h plural-table.h lang-table.h format.h filters.h \
 xgettext.h x-c.h x-po.h x-sh.h x-python.h x-lisp.h x-elisp.h x-librep.h \
 x-scheme.h x-smalltalk.h x-java.h x-properties.h x-csharp.h x-awk.h x-ycp.h \
 x-tcl.h x-perl.h x-php.h x-stringtable.h x-rst.h x-glade.h x-lua.h \
-x-javascript.h x-vala.h x-gsettings.h libexpat-compat.h
+x-javascript.h x-vala.h x-gsettings.h x-desktop.h libexpat-compat.h
 
 EXTRA_DIST += FILES project-id ChangeLog.0
 
