examples: Utilize GSettings in hello-c-gnome3 example

--- a/gettext-tools/examples/po/Makefile.am
+++ b/gettext-tools/examples/po/Makefile.am
@@ -24,7 +24,7 @@ POTFILES = \
   hello-c-gnome/hello.c \
   hello-c-gnome3/hello.c \
   hello-c-gnome3/hello.desktop.in.in \
-  hello-c-gnome3/hello.gresource.xml \
+  hello-c-gnome3/org.gnu.gettext.examples.hello.gschema.xml \
   hello-c-gnome3/hello.ui \
   hello-c++/hello.cc \
   hello-c++-qt/hello.cc \
