--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -56,7 +56,8 @@ EXAMPLESFILES = \
   hello-c-gnome3/autoclean.sh \
   hello-c-gnome3/hello.c \
   hello-c-gnome3/hello.desktop.in.in \
-  hello-c-gnome3/hello.gresource.xml \
+  hello-c-gnome3/org.gnu.gettext.examples.hello.gschema.xml \
+  hello-c-gnome3/org.gnu.gettext.examples.hello.gresource.xml \
   hello-c-gnome3/hello.ui \
   hello-c-gnome3/Makefile.am \
   hello-c-gnome3/configure.ac \
