--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -25,10 +25,10 @@ package=@PACKAGE@
 version=@VERSION@
 
 # Set variables
-# - gettext_dir     directory where the sources are stored.
+# - gettext_datadir     directory where the data files are stored.
 prefix="@prefix@"
 datarootdir="@datarootdir@"
-: ${gettext_dir="@datadir@/gettext"}
+: ${gettext_datadir="@datadir@/gettext"}
 
 # func_tmpdir
 # creates a temporary directory.
@@ -133,7 +133,7 @@ if test "@RELOCATABLE@" = yes; then
   func_find_curr_installdir # determine curr_installdir
   func_find_prefixes
   # Relocate the directory variables that we use.
-  gettext_dir=`echo "$gettext_dir/" | sed -e "s%^${orig_installprefix}/%${curr_installprefix}/%" | sed -e 's,/$,,'`
+  gettext_datadir=`echo "$gettext_datadir/" | sed -e "s%^${orig_installprefix}/%${curr_installprefix}/%" | sed -e 's,/$,,'`
 fi
 
 # func_trace macro configure.ac
@@ -365,8 +365,8 @@ for arg in $macrodirs; do
 done
 
 # For simplicity we change to the gettext source directory.
-cd "$gettext_dir" ||
-  func_fatal_error "gettext source directory '${gettext_dir}' doesn't exist"
+cd "$gettext_datadir" ||
+  func_fatal_error "gettext source directory '${gettext_datadir}' doesn't exist"
 
 # Variables which keep track what has been modified.
 added_directories=
@@ -661,7 +661,7 @@ test -d "$srcdir/$auxdir" || {
 for file in *; do
   case $file in
     ABOUT-NLS)
-      func_linkorcopy $file "$gettext_dir/$file" $file
+      func_linkorcopy $file "$gettext_datadir/$file" $file
       ;;
     config.rpath)
       if test -f "$srcdir/$auxdir$file"; then
@@ -669,7 +669,7 @@ for file in *; do
       else
         added_extradist="$added_extradist $auxdir$file"
       fi
-      func_linkorcopy $file "$gettext_dir/$file" "$auxdir$file"
+      func_linkorcopy $file "$gettext_datadir/$file" "$auxdir$file"
       ;;
   esac
 done
@@ -680,7 +680,7 @@ if test -n "$intldir"; then
   for file in *; do
     if test $file != COPYING.LIB-2.0 && test $file != COPYING.LIB-2.1; then
       if test $file != plural.c; then
-        func_linkorcopy $file "$gettext_dir/intl/$file" intl/$file
+        func_linkorcopy $file "$gettext_datadir/intl/$file" intl/$file
       else
         # plural.c is a generated file; it must be copied and touched.
         func_copy $file intl/$file
@@ -733,7 +733,7 @@ for podir in $podirs; do
       fi
     fi
     func_backup "$podir/$file"
-    func_linkorcopy $file "$gettext_dir/po/$file" "$podir/$file"
+    func_linkorcopy $file "$gettext_datadir/po/$file" "$podir/$file"
   done
   for file in *; do
     case $file in
@@ -741,7 +741,7 @@ for podir in $podirs; do
         # Already handled above.
         ;;
       Makevars.template)
-        func_linkorcopy Makevars.template "$gettext_dir/po/Makevars.template" "$podir/Makevars.template"
+        func_linkorcopy Makevars.template "$gettext_datadir/po/Makevars.template" "$podir/Makevars.template"
         if test -f "$srcdir/po/Makevars"; then
           LC_ALL=C sed -n -e 's/[ 	]*\([A-Za-z0-9_]*\)[ 	]*=.*/\1/p' < "$srcdir/$podir/Makevars" | LC_ALL=C sort > "$srcdir/$podir/Makevars.tmp1"
           LC_ALL=C sed -n -e 's/[ 	]*\([A-Za-z0-9_]*\)[ 	]*=.*/\1/p' < "$srcdir/$podir/Makevars.template" | LC_ALL=C sort > "$srcdir/$podir/Makevars.tmp2"
@@ -776,7 +776,7 @@ You can then remove $podir/Makevars.template.
           fi
         fi
         func_backup "$podir/$file"
-        func_linkorcopy $file "$gettext_dir/po/$file" "$podir/$file"
+        func_linkorcopy $file "$gettext_datadir/po/$file" "$podir/$file"
         ;;
     esac
   done
@@ -1302,7 +1302,7 @@ fi
 if $doit; then
   echo "$please"
   echo "You might also want to copy the convenience header file gettext.h"
-  echo "from the $gettext_dir directory into your package."
+  echo "from the $gettext_datadir directory into your package."
   echo "It is a wrapper around <libintl.h> that implements the configure --disable-nls"
   echo "option."
   echo
