examples: Rename gnome3 XML files shorter than 99
* gettext-tools/examples/hello-c-gnome3/hello.gresource.xml: Rename
from org.gnu.gettext.examples.hello.gresource.xml.
* gettext-tools/examples/hello-c-gnome3/hello-gschema.xml: Rename
from org.gnu.gettext.examples.hello.gschema.xml.
* gettext-tools/examples/hello-c-gnome3/po/POTFILES.in: Adjust the
file name change.
* gettext-tools/examples/hello-c-gnome3/po/Makefile.am: Adjust the
file name change.
* gettext-tools/examples/Makefile.am: Adjust the file name change.
* gettext-tools/examples/po/Makefile.am: Adjust the file name change.

--- a/gettext-tools/examples/hello-c-gnome3/Makefile.am
+++ b/gettext-tools/examples/hello-c-gnome3/Makefile.am
@@ -28,11 +28,11 @@ LDADD = $(GTK_LIBS) @LIBINTL@
 BUILT_SOURCES = gschemas.compiled resources.c
 
 # Compile GSettings schema.
-gschemas.compiled: org.gnu.gettext.examples.hello.gschema.xml
+gschemas.compiled: hello.gschema.xml
 	$(AM_V_GEN) $(GLIB_COMPILE_SCHEMAS) .
 
 # Compile assets into a C source and link it with the application.
-resources.c: org.gnu.gettext.examples.hello.gresource.xml hello.ui
+resources.c: hello.gresource.xml hello.ui
 	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ \
 		--sourcedir=$(srcdir) --generate-source
 
@@ -52,5 +52,5 @@ CLEANFILES = $(BUILT_SOURCES) hello.desktop.in $(desktop_DATA)
 
 # Additional files to be distributed.
 EXTRA_DIST = autogen.sh autoclean.sh hello.ui hello.desktop.in.in \
-	org.gnu.gettext.examples.hello.gschema.xml \
-	org.gnu.gettext.examples.hello.gresource.xml
+	hello.gschema.xml \
+	hello.gresource.xml
