build: Turn update-po.sh into a Makefile rule
Suggested by Andreas Stricker in:
<https://lists.gnu.org/archive/html/bug-gettext/2014-04/msg00020.html>.
* configure.ac (maintainer-update-po): New recursive rule.
* update-po.sh: Remove.
* autogen.sh: Don't mention update-po.sh.
* Makefile.am (maintainer-update-po-local): New rule.
* gettext-runtime/Makefile.am (maintainer-update-po): New rule.
* gettext-runtime/man/Makefile.am (update-man1): Remove; add explicit
dependency on the executable to each .1 rule.
* gettext-tools/man/Makefile.am (update-man1): Remove; add explicit
dependency on the executable to each .1 rule.

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,8 @@ dnl Checks for library functions.
 
 AC_CONFIG_SUBDIRS([gettext-runtime gettext-tools])
 
+AM_EXTRA_RECURSIVE_TARGETS([maintainer-update-po])
+
 dnl Ensure that "configure --help" lists all the command line options that
 dnl are usable with the subdir configures. Really AC_CONFIG_SUBDIRS should
 dnl do it by itself.
