Makefile.in.in: Turn {POFILES,DISTFILES}DEPS into yes/no options
Preserve the previous behavior even if a user forgot to update
Makevars, after calling autopoint.
* Makevars (PO_DEPENDS_ON_POT): Rename from POFILESDEPS and turn
it into a yes/no option.
(DIST_DEPENDS_ON_POT): Rename from DISTFILESDEPS and turn it into
a yes/no option.

--- a/gettext-runtime/po/Makefile.in.in
+++ b/gettext-runtime/po/Makefile.in.in
@@ -77,6 +77,16 @@ POTFILES = \
 
 CATALOGS = @CATALOGS@
 
+POFILESDEPS_ = $(srcdir)/$(DOMAIN).pot
+POFILESDEPS_yes = $(POFILESDEPS_)
+POFILESDEPS_no =
+POFILESDEPS = $(POFILESDEPS_$(PO_DEPENDS_ON_POT))
+
+DISTFILESDEPS_ = update-po
+DISTFILESDEPS_yes = $(DISTFILESDEPS_)
+DISTFILESDEPS_no =
+DISTFILESDEPS = $(DISTFILESDEPS_$(DIST_DEPENDS_ON_POT))
+
 # Makevars gets inserted here. (Don't remove this line!)
 
 .SUFFIXES:
