Makefile.in.in: Rename DIST_DEPENDS_ON_POT to DIST_DEPENDS_ON_UPDATE_PO

--- a/gettext-runtime/po/Makefile.in.in
+++ b/gettext-runtime/po/Makefile.in.in
@@ -85,7 +85,7 @@ POFILESDEPS = $(POFILESDEPS_$(PO_DEPENDS_ON_POT))
 DISTFILESDEPS_ = update-po
 DISTFILESDEPS_yes = $(DISTFILESDEPS_)
 DISTFILESDEPS_no =
-DISTFILESDEPS = $(DISTFILESDEPS_$(DIST_DEPENDS_ON_POT))
+DISTFILESDEPS = $(DISTFILESDEPS_$(DIST_DEPENDS_ON_UPDATE_PO))
 
 # Makevars gets inserted here. (Don't remove this line!)
 
